--- a/app/views/autorizaciones/autorizacion.html.erb
+++ b/app/views/autorizaciones/autorizacion.html.erb
@@ -7,8 +7,14 @@
   
   <div data-role="collapsible-set" data-theme="b" data-content-theme="d" data-inset="false">
     
-    <div data-role="collapsible" data-collapsed="false">
-    <h2>Pendientes</h2>
+    <%cantpendiente = @autorizaciones.pendiente.vigente.count %>
+    <div data-role="collapsible" <% if cantpendiente > 0 %> data-collapsed="false" <%end%> >
+      <h2>
+        <li class= "ui-li ui-li-has-count">
+          Pendientes
+          <span class="ui-li-count ui-btn-up-b ui-btn-corner-all"><%=cantpendiente%></span>
+        </li>
+      </h2>
       <ul data-role="listview" data-filter="true">
         <% @autorizaciones.pendiente.vigente.each do |autorizacion| %>
           <li data-filtertext="<%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre} - #{autorizacion.alumno.apellidos_nombres}" %>" >
@@ -24,9 +30,14 @@
     </div>
     
     <div data-role="collapsible">
-      <h2>Respondidos</h2>
+      <h2>
+        <li class= "ui-li ui-li-has-count">
+          Respondidos
+          <span class="ui-li-count ui-btn-up-b ui-btn-corner-all"><%=@autorizaciones.respondido.vigente.count%></span>
+        </li>
+      </h2>
       <ul data-role="listview" data-filter="true">
-        <% @autorizaciones.respondida.vigente.each do |autorizacion| %>    
+        <% @autorizaciones.respondido.vigente.each do |autorizacion| %>    
           <li data-filtertext="<%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre} - #{autorizacion.alumno.apellidos_nombres}" %>" >
             <%= link_to edit_autorizacion_path(autorizacion) do %>
               <h3 class= "ui-li-heading"> <%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre}" %>  </h3>
@@ -39,7 +50,12 @@
     </div>
 
     <div data-role="collapsible">
-      <h2>Pasados</h2>
+      <h2>
+        <li class= "ui-li ui-li-has-count">
+          Pasados
+          <span class="ui-li-count ui-btn-up-b ui-btn-corner-all"><%=@autorizaciones.pasado.count%></span>
+        </li>
+      </h2>
       <ul data-role="listview" data-filter="true">
         <% @autorizaciones.pasado.each do |autorizacion| %>    
           <li data-filtertext="<%= "#{autorizacion.actividad.fecha_hora_inicio.strftime('%d/%m/%Y')} - #{autorizacion.actividad.nombre} - #{autorizacion.alumno.apellidos_nombres}" %>" >
