--- a/app/views/colegios/index.html.erb
+++ b/app/views/colegios/index.html.erb
@@ -25,13 +25,21 @@
     <td><%= colegio.logo %></td>
     <td><%= colegio.director %></td>
     <td><%= colegio.usuario %></td>
-    <td><%= link_to 'Show', colegio %></td>
-    <td><%= link_to 'Edit', edit_colegio_path(colegio) %></td>
-    <td><%= link_to 'Destroy', colegio, confirm: 'Are you sure?', method: :delete %></td>
+    <% if can? :read, @colegio %>
+        <td><%= link_to 'Show', colegio %></td>
+    <% end %>
+    <% if can? :update, @colegio %>
+        <td><%= link_to 'Edit', edit_colegio_path(colegio) %></td>
+    <% end %>
+    <% if can? :destroy, @colegio %>
+        <td><%= link_to 'Destroy', colegio, confirm: 'Are you sure?', method: :delete %></td>
+    <% end %>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Colegio', new_colegio_path %>
+<% if can? :create, @colegio %>
+    <%= link_to 'New Colegio', new_colegio_path %>
+<% end %>
