--- a/app/views/menus/main.html.erb
+++ b/app/views/menus/main.html.erb
@@ -4,22 +4,82 @@
 
 <div data-role="content">
   <div class="content-primary">
-    <ul data-role="listview">
-        <li data-role="list-divider">Cuaderno de control</li>
-        <li><a href="<%= cuadernos_controles_path %>">Registrar</a></li>
-        <li><a href="<%= revision_cuaderno_control_path(current_user.usuario) %>" >Revisar</a></li>
-        <li><a href="<%= cuaderno_controles_revisiones_path %>">Verificar</a></li>
-        <li data-role="list-divider">Seguridad de alumnos</li>
-        <li><a href="<%= personas_vinculadas_path %>">Personas vinculadas</a></li>
-        <li><a href="<%= alumnos_secciones_path %>">Vincular personas</a></li>
-        <li><a href="<%= salida_path %>">Salida de alumnos</a></li>
-        <li data-role="list-divider">Actividades del colegio</li>
-        <li><a href="<%= actividades_path %>">Registrar</a></li>
-        <li><a href="<%= autorizacion_actividad_path(current_user.usuario) %>" >Autorizar</a></li>
-        <li><a href="<%= autorizaciones_path %>" >Consultar autorizaciones</a></li>
-        <li><a href="<%= calendario_actividades_path(Date.current.year, Date.current.month, Date.current.strftime('%d')) %>">Calendario</a></li>
-        <li data-role="list-divider">Seguridad del sistema</li>
-        <li><a href="<%= usuarios_path %>">Usuarios</a></li>
-    </ul>
+    <div data-role="collapsible-set" data-theme="b" data-content-theme="d" data-inset="false">
+      <div data-role="collapsible" data-collapsed="false">
+        <h2>
+          Cuaderno de control
+        </h2>
+        <ul data-role="listview">      
+          <% if can? :manage, CuadernoControl %>
+            <li><a href="<%= cuadernos_controles_path %>">Registrar</a></li>
+          <% end %>  
+            
+            <% if can? :update, CuadernoControlRevision %>
+              <li><a href="<%= revision_cuaderno_control_path(current_user.usuario) %>" >Revisar</a></li>
+            <% end %>
+              
+          <% if can? :read, CuadernoControlRevision %>    
+            <li><a href="<%= cuaderno_controles_revisiones_path %>">Verificar</a></li>
+          <% end %>
+        </ul>
+      </div>
+      
+      <% if (can? :manage, PersonaVinculada) || (can? :manage, AlumnoPersonaVinculada) || (can? :create, Asistencia) %>
+      <div data-role="collapsible">
+        <h2>
+          Seguridad de alumnos
+        </h2>
+        <ul data-role="listview">  
+          <% if can? :manage, PersonaVinculada %>
+            <li><a href="<%= personas_vinculadas_path %>">Personas vinculadas</a></li>
+          <% end %>
+            
+          <% if can? :manage, AlumnoPersonaVinculada %>
+            <li><a href="<%= alumnos_secciones_path %>">Vincular personas</a></li>
+          <% end %>
+            
+          <% if can? :create, Asistencia %>
+            <li><a href="<%= salida_path %>">Salida de alumnos</a></li>
+          <% end %>
+        </ul>
+      </div>
+      <% end %>
+      
+      <div data-role="collapsible">
+        <h2>
+          Actividades del colegio
+        </h2>
+        <ul data-role="listview">      
+          <% if can? :manage, Actividad %>
+            <li><a href="<%= actividades_path %>">Registrar</a></li>
+          <% end %>
+            
+            <% if can? :update, Autorizacion %>
+              <li><a href="<%= autorizacion_actividad_path(current_user.usuario) %>" >Autorizar</a></li>
+            <% end %>
+              
+            <% if can? :read, Autorizacion %>
+              <li><a href="<%= autorizaciones_path %>" >Consultar autorizaciones</a></li>
+            <% end %>
+            
+            <% if can? :read, Actividad %>
+              <li><a href="<%= calendario_actividades_path(Date.current.year, Date.current.month, Date.current.strftime('%d')) %>">Calendario</a></li>
+            <% end %>
+        </ul>
+      </div>
+      
+      <% if can? :manage, @usuario %>
+        <div data-role="collapsible">
+          <h2>
+            Seguridad del sistema
+          </h2>
+          <ul data-role="listview">      
+              <li><a href="<%= usuarios_path %>">Usuarios</a></li>
+          </ul>
+        </div> 
+      <% end %>
+      
+    </div>    
+    
   </div><!--/content-primary -->	
 </div>
