--- a/app/views/perfiles_permisos/edit.html.erb
+++ b/app/views/perfiles_permisos/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing perfil_permiso</h1>
+<div data-role="header">
+    <h1>Editar asignación de permisos</h1>
+    <%= link_to 'Regresar', perfiles_permisos_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @perfil_permiso %> |
-<%= link_to 'Back', perfiles_permisos_path %>
