--- a/app/views/perfiles_permisos/index.html.erb
+++ b/app/views/perfiles_permisos/index.html.erb
@@ -1,25 +1,17 @@
-<h1>Listing perfiles_permisos</h1>
+<div data-role="header">
+  <h1>Permisos por perfil</h1>
+  <%= link_to 'Agregar', new_perfil_permiso_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
+</div>
 
-<table>
-  <tr>
-    <th>Perfil</th>
-    <th>Permiso</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @perfiles_permisos.each do |perfil_permiso| %>
-  <tr>
-    <td><%= perfil_permiso.perfil_id %></td>
-    <td><%= perfil_permiso.permiso_id %></td>
-    <td><%= link_to 'Show', perfil_permiso %></td>
-    <td><%= link_to 'Edit', edit_perfil_permiso_path(perfil_permiso) %></td>
-    <td><%= link_to 'Destroy', perfil_permiso, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Perfil permiso', new_perfil_permiso_path %>
+<div data-role="content">
+  <ul data-role="listview" data-filter="true">
+    <% @perfiles_permisos.each do |perfil_permiso| %>
+    <li data-filtertext="<%= "#{perfil_permiso.perfil.descripcion} #{perfil_permiso.permiso.subject_class} #{perfil_permiso.permiso.action}" %>" >
+      <%= link_to edit_perfil_permiso_path(perfil_permiso) do %>
+        <%= simple_format("#{perfil_permiso.perfil.descripcion}: #{perfil_permiso.permiso.subject_class} => #{perfil_permiso.permiso.action}") %>
+      <% end %>
+      <%= link_to 'Eliminar', perfil_permiso, confirm: '¿Seguro que desea eliminar el registro?', method: :delete, "data-icon" => "delete" %>
+    </li>
+    <% end  %>
+  </ul>
+</div>
