--- a/app/views/perfiles/edit.html.erb
+++ b/app/views/perfiles/edit.html.erb
@@ -1,6 +1,6 @@
 <div data-role="header">
     <h1>Editar perfil</h1>
-    <%= link_to 'Regresar', perfiles_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
+    <%= link_to 'Regresar', @perfil, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
 </div>
 
 <%= render 'form' %>
