--- a/app/views/perfiles_permisos/new.html.erb
+++ b/app/views/perfiles_permisos/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New perfil_permiso</h1>
+<div data-role="header">
+  <h1>Asignar permisos</h1>
+  <%= link_to 'Regresar', perfiles_permisos_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', perfiles_permisos_path %>
