--- a/app/views/permisos/_form.html.erb
+++ b/app/views/permisos/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@permiso) do |f| %>
   <% if @permiso.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@permiso.errors.count, "error") %> prohibited this permiso from being saved:</h2>
+    <div id="error_explanation" data-role="header" data-theme="e">
+      <h2><%= pluralize(@permiso.errors.count, "error") %> impidieron que se grabe el registro:</h2>
 
       <ul>
       <% @permiso.errors.full_messages.each do |msg| %>
@@ -11,19 +11,17 @@
     </div>
   <% end %>
 
+<div data-role="fieldcontain">
   <div class="field">
-    <%= f.label :action %><br />
-    <%= f.text_field :action %>
-  </div>
-  <div class="field">
-    <%= f.label :subject_class %><br />
+    Clase de sujeto: <br/>
     <%= f.text_field :subject_class %>
   </div>
   <div class="field">
-    <%= f.label :subject_id %><br />
-    <%= f.text_field :subject_id %>
+    Acción: <br/>
+    <%= f.text_field :action %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Grabar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
   </div>
+</div>
 <% end %>
