--- a/app/views/cuaderno_controles_revisiones/show.html.erb
+++ b/app/views/cuaderno_controles_revisiones/show.html.erb
@@ -3,17 +3,15 @@
     <%= @cuaderno_control_revision.alumno.apellidos_nombres %>
     <%= @cuaderno_control_revision.cuaderno_control.fecha %>
   </h1>
-  <%= link_to 'Regresar', cuaderno_controles_revisiones_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
+  <%= link_to 'Regresar', cuaderno_controles_revisiones_path(:accion => "revisar", :usuario => current_user.usuario), "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
 </div>
 
 <div data-role="content">
   <ul id='cuaderno_controles_revisiones' data-role="listview" data-filter="true">
     <% @cuaderno_control_revision.cuaderno_control.cuaderno_controles_eventos.where("alumno_id is null or alumno_id=?", params[@cuaderno_control_revision.alumno.id]).each do |cuaderno_control_evento| %>      
-      <li data-role="list-divider">      
-        <%= TipoEvento.find(cuaderno_control_evento.tipo_evento_id).descripcion %> 
-      </li>
       <li>
-        <%= simple_format(cuaderno_control_evento.descripcion) %>      
+        <h3><%= TipoEvento.find(cuaderno_control_evento.tipo_evento_id).descripcion %></h3>
+        <p><%= simple_format(cuaderno_control_evento.descripcion) %></p>
       </li>             
     <% end %>
   </ul>      
@@ -23,16 +21,17 @@
 
 <%= form_for(@cuaderno_control_revision, :url => {:action => "revisar"}, :html => { :class => "ui-body ui-body-c" }) do |f| %>
   <% if @cuaderno_control_revision.revisado == 0 %>
-    <!--div data-role="footer"> para GET
-      <!--%= link_to 'Revisar', "/cuaderno_controles_revisiones/#{@cuaderno_control_revision.id}/revisar", "class" => "ui-btn-left", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
-    </div-->   
-    <div class="field">
-      Observaciones<br />
-      <%= f.text_area :observaciones %>
-    </div>
-    <div class="actions">
-      <%= f.submit "Revisar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
-    </div>
+    <% if can? :update, @cuaderno_control_revision %>   
+      <div class="field">
+        Observaciones<br />
+        <%= f.text_area :observaciones %>
+      </div>
+      <div class="actions">
+        <%= f.submit "Revisar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
+      </div>
+    <% else %>
+      <div data-role="footer">No revisado</div>
+    <% end %>
   <% else %>
     <div class="field">
       <%= f.text_area :observaciones, :readonly => true %>
