--- a/app/views/autorizaciones/index.html.erb
+++ b/app/views/autorizaciones/index.html.erb
@@ -16,7 +16,7 @@
         <div data-role="fieldcontain">
             <!--%= collection_select(:actividad, :tipo_evento_id, TipoEvento.where("cuaderno_control = 0")) %-->
             Actividad: <%= collection_select(:actividad, :id, Actividad.where("anio_escolar_id = 1 and requiere_autorizacion = 1").order("fecha_hora_inicio DESC"), :id, :nombre_fecha, {:selected => actividad}, {"data-mini" => "true", :name => "actividad_id"}) %><br />
-            Sección: <%= collection_select(:seccion, :id, Seccion.all, :id, :grado_seccion, { :prompt => ':: Seleccione ::'}, {"data-mini" => "true", :name => "seccion_id"}) %>
+            Sección: <%= collection_select(:seccion, :id, Seccion.all, :id, :grado_seccion, { :prompt => ':: Seleccione ::', :selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
             <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil %>
         </div>
     <% end %>
