--- a/app/views/cuaderno_controles_revisiones/index.html.erb
+++ b/app/views/cuaderno_controles_revisiones/index.html.erb
@@ -35,7 +35,7 @@
       <h2>
         <li class= "ui-li ui-li-has-count">
           No revisados
-          <span class="ui-li-count ui-btn-up-c ui-btn-corner-all"><%=@cuaderno_controles_revisiones.no_revisado.count%></span>
+          <span class="ui-li-count ui-btn-up-b ui-btn-corner-all"><%=@cuaderno_controles_revisiones.no_revisado.count%></span>
         </li>
       </h2>  
       <ul data-role="listview" data-filter="true">
@@ -60,7 +60,7 @@
       <h2>
         <li class= "ui-li ui-li-has-count">
           Revisados
-          <span class="ui-li-count ui-btn-up-c ui-btn-corner-all"><%=@cuaderno_controles_revisiones.revisado.count%></span>
+          <span class="ui-li-count ui-btn-up-b ui-btn-corner-all"><%=@cuaderno_controles_revisiones.revisado.count%></span>
         </li>
       </h2>
       <ul data-role="listview" data-filter="true">
