--- a/app/views/perfiles/index.html.erb
+++ b/app/views/perfiles/index.html.erb
@@ -1,6 +1,6 @@
 <div data-role="header">
   <h1>Perfiles</h1>
-  <%= link_to 'Agregar', new_perfil_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
+  <%= link_to 'Registrar', new_perfil_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
 </div>
 
 <div data-role="content">
