--- a/app/views/permisos/index.html.erb
+++ b/app/views/permisos/index.html.erb
@@ -1,6 +1,6 @@
 <div data-role="header">
   <h1>Permisos</h1>
-  <%= link_to 'Agregar', new_permiso_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
+  <%= link_to 'Registrar', new_permiso_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
 </div>
 
 <div data-role="content">
