--- a/app/views/personas_vinculadas/index.html.erb
+++ b/app/views/personas_vinculadas/index.html.erb
@@ -2,7 +2,7 @@
   <h1>Personas vinculadas</h1>
   
   <% if (can? :create, PersonaVinculada) %>
-    <%= link_to 'Agregar', new_persona_vinculada_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
+    <%= link_to 'Registrar', new_persona_vinculada_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
   <% end %>
 </div>
 
